--- a/style.css
+++ b/style.css
@@ -49,6 +49,14 @@ label {
     opacity: 0.7;
     font-style: italic;
 }
+#top {
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 3;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.7);
+}
 input[type=button]:hover {
     cursor: pointer;
     font-size: large;
@@ -84,7 +92,7 @@ input[type=number] {
   -moz-appearance: textfield;
 }
 .hide {
-    display: none;
+    display: none !important;
 }
 #graph {
     position: relative;
@@ -94,14 +102,14 @@ input[type=number] {
     top: 30px;
     left: 480px;
 
-    z-index: 10;
+    z-index: 2;
     padding: 6px 10px;
     font-family: monospace;
     background: var(--col-02);
     color: var(--col-01);
     border: 2px solid var(--col-01);
 }
-#float, #move, #download {
+#float, #move {
     width: 25px;
     height: 25px;
     margin: 3px 0px 3px;
@@ -122,7 +130,7 @@ input[type=number] {
     margin-bottom: 20px;
     align-content: center;
 
-    z-index: 10;
+    z-index: 2;
     padding: 0px 8px 3px 3px;
     /* top right bottom left */
     font-family: monospace;
@@ -137,7 +145,7 @@ input[type=number] {
     background-color: rgba(0, 0, 0, 0.7);
 }
 #graph.xPos {
-    left: 63.5vw;
+    left: 62vw;
 }
 #graph.yPos {
     top: 24vw;
